# starter

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
debug_bundles/: .gitignore  README.md
docs/: BORROW_CHECKER_SPEC.md
integration-tests/: conftest.py  test_evals.py
prompt_overrides/: .gitignore  README.md
skills/secret-trivia/: SKILL.md
src/trivia_agent/: __init__.py  adapters.py  agent_loop.py  config.py  dispatch.py  eval_loop.py  evaluators.py  feedback.py  isolation.py  mailboxes.py  models.py  sections.py  tools.py  worker.py
tests/trivia_agent/: test_adapters.py  test_agent_loop.py  test_config.py  test_dispatch.py  test_eval_loop.py  test_evaluators.py  test_feedback.py  test_isolation.py  test_mailboxes.py  test_models.py  test_sections.py  test_tools.py  test_worker.py
workspace/: CLAUDE.md
